<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#333"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/MainActivityCaptionText"
        android:textSize="30sp"
        android:textColor="#fff"
        android:id="@+id/CAPTION_TEXTVIEW" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetButtonText"
        android:id="@+id/SET_BUTTON"
        android:width="200dp"
        android:background="#666"
        android:textColor="#fff"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/CAPTION_TEXTVIEW"
        android:onClick="navigateToSetBeaconActivity"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GetButtonText"
        android:id="@+id/GET_BUTTON"
        android:background="#666"
        android:textColor="#fff"
        android:layout_below="@+id/SET_BUTTON"
        android:layout_marginTop="15dp"
        android:width="200dp"
        android:onClick="navigateToGetBeaconActivity"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DeleteButtonText"
        android:id="@+id/DELETE_BUTTON"
        android:background="#666"
        android:textColor="#fff"
        android:layout_below="@+id/GET_BUTTON"
        android:layout_marginTop="15dp"
        android:width="200dp"
        android:onClick="removeBeacon"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DELETE_BUTTON"
        android:layout_marginTop="15dp"
        android:text="@string/ListButtonText"
        android:background="#666"
        android:textColor="#fff"
        android:width="200dp"
        android:id="@+id/LIST_BUTTON"
        android:onClick="listBeacons"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LIST_BUTTON"
        android:layout_marginTop="15dp"
        android:text="@string/ChangeUsernameButtonText"
        android:background="#666"
        android:textColor="#fff"
        android:width="200dp"
        android:id="@+id/USERNAME_BUTTON"
        android:onClick="changeUserName"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/USERNAME_BUTTON"
        android:layout_marginTop="15dp"
        android:text="@string/ChangeApiUrlButtonText"
        android:background="#666"
        android:textColor="#fff"
        android:width="200dp"
        android:id="@+id/CHANGE_API_BUTTON"
        android:onClick="changeApiUrl"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
